添加商品管理

--- a/src/scss/global/var.scss
+++ b/src/scss/global/var.scss
@@ -11,8 +11,20 @@
   border:none;
 }
 
+.f-6{
+  font-size: 12px;
+}
+
 .f-7{
   font-size: 14px;
+}
+
+.f-10{
+  font-size: 20px;
+}
+
+.f-11{
+  font-size: 22px;
 }
 
 .f-12{
